# mindflow-backend

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: main.py  models.py  schemas.py
app/data/: mock_data.json
